Fix z-index of library header

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -801,7 +801,7 @@ body.drag {
   .library-view-header {  
     position: sticky;
     top: 0;
-    z-index: 10000;
+    z-index: 5000;
     background: #fff;
     margin: 0;
 
